--- a/app/src/main/res/layout/noticia.xml
+++ b/app/src/main/res/layout/noticia.xml
@@ -42,6 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="textEnd"
+            android:textStyle="italic"
             android:layout_marginTop="16dp"
             android:text=""
             android:textSize="16dp"></TextView>
